--- a/employee-management-api/.env.example
+++ b/employee-management-api/.env.example
@@ -1,8 +1,6 @@
-DB_PORT='3306'
-DB_HOST='localhost'
-DB_USER=root
-DB_PASSWORD=123456
-DB_NAME='employee'
+DB_USER='<DB USER>'
+DB_NAME='<DATABASE NAME>'
+DB_PASSWORD='<DATABASE PASSWORD>'
 
 PORT=5000
 ENVIRONMENT=dev
