--- a/employee-management-api/package.json
+++ b/employee-management-api/package.json
@@ -24,12 +24,18 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1234.0",
+    "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mysql2": "^2.3.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "nestjs-typeorm-paginate": "^4.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -66,7 +72,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": "../.*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
