--- a/employee-managment-ui/package.json
+++ b/employee-managment-ui/package.json
@@ -11,7 +11,9 @@
     "test:watch": "jest --watch - config ./config/jest.config.js",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
@@ -31,15 +33,26 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "redux-mock-store": "^1.5.4",
+    "storybook-addon-next-router": "^4.0.1",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "babel-jest": "^29.0.1",
+    "babel-loader": "^8.3.0",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.1",
