--- a/employee-managment-ui/tsconfig.json
+++ b/employee-managment-ui/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "suppressImplicitAnyIndexErrors": true,
     "baseUrl": ".",
     "paths": {
       "@components/*": ["components/*"],
@@ -22,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "test/test-utils.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules","src/stories"]
 }
