--- a/employee-managment-ui/package.json
+++ b/employee-managment-ui/package.json
@@ -8,9 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch - config ./config/jest.config.js",
+    "test:watch": "jest --watch - config ./config/jest.config.ts",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node-dev/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -57,6 +57,7 @@
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.2"
   }
 }
